# ego

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  foreign.toml
ego/: .gitignore  Cargo.toml
ego/src/: lib.rs  main.rs  wasm.rs
ego/src/ast/: lexer.rs  mod.rs  parser.rs
ego/src/ast/lexer_types/: mod.rs
ego/src/ast/nodes/: call_expression.rs  export_statement.rs  function_declaration.rs  import_statement.rs  member_expression.rs  mod.rs  object_type.rs  objects.rs  string_literal.rs  struct_declaration.rs  structs.rs  vector.rs
ego/src/commands/: compile.rs  mod.rs  run.rs
ego/src/compiler/: bytecode.rs  mod.rs
ego/src/compiler/handlers/: call_handler.rs  function_call_handler.rs  mod.rs  print.rs  print_handler.rs
ego/src/core/: mod.rs
ego/src/core/error/: mod.rs
ego/src/runtime/: interpreter.rs
ego/src/tools/: compile_stdlib.rs
self/: Cargo.toml
self/src/: heap.rs  instructions.rs  lib.rs  memory.rs  opcodes.rs  stack.rs  symbol_table.rs  translator.rs  vm.rs
self/src/core/: error.rs  execution.rs  mod.rs
self/src/core/error/: action_errors.rs  ai_errors.rs  fs_errors.rs  mod.rs  net_errors.rs  os_errors.rs  struct_errors.rs  type_errors.rs
self/src/core/handlers/: ai_handler.rs  call_handler.rs  foreign_handlers.rs  mod.rs  print_handler.rs
self/src/std/: heap_utils.rs  mod.rs  utils.rs
self/src/std/ai/: members.rs  mod.rs  types.rs
self/src/std/env/: members.rs  mod.rs
self/src/types/: bool.rs  f64.rs  i32.rs  i64.rs  mod.rs  u32.rs  u64.rs
self/src/utils/: foreign_handlers_utils.rs  from_bytes.rs  mod.rs  to_bytes.rs
(+27 files in other folders)
