[package]
name = "self-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde_json = "1"
regex = "1.11.1"
